Removing the transform CSS property from the SVG element does not cause invalidation https://bugs.webkit.org/show_bug.cgi?id=225366

Reviewed by Simon Fraser.

Source/WebCore:

If the new or the old RenderStyle includes a transform, the renderer of
the SVG element needs to be repainted.

Test: svg/css/svg-css-transform-dynamic-remove.html

* rendering/svg/RenderSVGModelObject.cpp:
(WebCore::RenderSVGModelObject::styleDidChange):

LayoutTests:

* svg/css/svg-css-transform-dynamic-remove-expected.html: Added.
* svg/css/svg-css-transform-dynamic-remove.html: Added.


Canonical link: https://commits.webkit.org/237641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277385 268f45cc-cd09-0410-ab3c-d52691b4dbfc